<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <com.spacemangames.biomatcher.view.NameCompound
            android:id="@+id/NameCompound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_match_for"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/overallMatchResult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="bla"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/overallMatchProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="24dip"
            android:progress="50"
            android:progressDrawable="@drawable/progressbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/physical_match"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/physicalMatchResult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="bla"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/physicalMatchProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:minHeight="16dip"
            android:progress="50"
            android:progressDrawable="@drawable/progressbar_physical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emotional_match"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/emotionalMatchResult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="bla"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/emotionalMatchProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:minHeight="16dip"
            android:progress="50"
            android:progressDrawable="@drawable/progressbar_emotional" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intellectual_match"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/intellectualMatchResult"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="bla"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/intellectualMatchProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="16dip"
            android:progress="50"
            android:progressDrawable="@drawable/progressbar_intellectual" />
    </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        ads:adSize="BANNER"
        ads:adUnitId="a1511f79ed1013d"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR, 43F38DFF2DC2945ADEE9D75EE4623569" />

</RelativeLayout>